# python3-idotmatrix-client

./: .gitignore  .run_in_venv.ps1.swp  README.md  app.py  build.bat  build.ps1  build.sh  create_venv.ps1  create_venv.sh  find_cmds.sh  gui.ps1  gui.py  pyproject.toml  requirements.txt  run_in_venv.ps1  run_in_venv.sh  setup_and_make_launcher.ps1
assistant/: GPTController.py  README.md  assistant.py  gpt.py  tools.json
core/: bleChronograph.py  bleClock.py  bleCommon.py  bleCountdown.py  bleDIY.py  bleEco.py  bleFullscreenColor.py  bleGraffiti.py  bleMusicSync.py  bleScoreboard.py  bleSystem.py  bluetooth.py  cmd.py  utils.py
core/idotmatrix/: chronograph.py  clock.py  common.py  const.py  countdown.py  diy.py  eco.py  fullscreenColor.py  gif.py  graffiti.py  image.py  musicSync.py  scoreboard.py  system.py  text.py
gui/: build.bat  build.sh  gui.py
homeassistant/: automations.yaml  configuration.yaml
utils/: utils.py
utils/gif_converter/: gui.py  utils.py  video_converter.py
windows_scripts/: gui.ps1  resize_and_combine_all.ps1  setup_and_install_gui.ps1  setup_and_make_launcher.ps1  temp.ps1
windows_scripts/utils/gif_converter/: video_converter.py
