[project]

name = "iDotMatrix-Client"
version = "0.0.1"
description = "configure any iDotMatrix compatible 16x16 or 32x32 pixel display without chinese android apps."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["idotmatrix", "bluetooth", "kandru"]
authors = [
  {name = "Kalle Minkner", email = "info@kalleminkner.de" }
]
maintainers = [
  {name = "Kalle Minkner", email = "info@kalleminkner.de" }
]
dependencies = [
  "asyncio",
  "idotmatrix==0.0.8",
  "bleak",
  "pillow",
  "argparse",
  "numpy",
  "requests"
]

[project.urls]

"Homepage" = "https://kandru.net"
"Source" = "https://github.com/derkalle4/python3-idotmatrix-client"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
